Quantum _computing_ instead of _computation_.

--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
 		<title>Q.js</title>
 		<meta charset="utf-8">
 		<meta name="viewport"             content="width=device-width,initial-scale=1.0">
-		<meta name="description"          content="Q.js is quantum computation in your browser.">
+		<meta name="description"          content="Q.js is quantum computing in your browser.">
 		
 		<!-- meta name="twitter:card"         content="summary">
 		<meta name="twitter:site"         content="@stew_rtsmith">
 		<meta name="twitter:creator"      content="@stew_rtsmith">
-		<meta name="twitter:description"  content="Q.js is quantum computation in your browser.">
+		<meta name="twitter:description"  content="Q.js is quantum computing in your browser.">
 		<meta name="twitter:title"        content="Q.js">
 		<meta name="twitter:image"        content="">
 		<meta name="twitter:url"          content="https://github.com/stewdio/q.js">
 		
 		<meta property="og:type"          content="website">
-		<meta property="og:description"   content="Q.js is quantum computation in your browser.">
+		<meta property="og:description"   content="Q.js is quantum computing in your browser.">
 		<meta property="og:title"         content="Q.js">
 		<meta property="og:image"         content="">
 		<meta property="og:url"           content="https://github.com/stewdio/q.js" -->
@@ -32,7 +32,7 @@
 	</head>
 	<body>
 
-		<strong>Q.js is quantum computation in your browser.</strong><br>
+		<strong>Q.js is quantum computing in your browser.</strong><br>
 		Right now all the action is in your JavaScript console,<br>
 		so open that up!
 		<script>
