Class description updates.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 
 
-
+console.log( '\n\nQ.ComplexNumber\n', Q.extractDocumentation( Q.ComplexNumber ), '\n\n' )
 console.log( '\n\nQ.Matrix\n', Q.extractDocumentation( Q.Matrix ), '\n\n' )
 console.log( '\n\nQ.Qubit\n', Q.extractDocumentation( Q.Qubit ), '\n\n' )
 
