--- a/Gate.html
+++ b/Gate.html
@@ -4,11 +4,11 @@
 		<meta charset="utf-8">
 		<title>Q ⟩ Gate</title>
 		<link rel="stylesheet" type="text/css" href="Assets/style.css">
-		<script src="Source/Q.js"></script>
-		<script src="Source/ComplexNumber.js"></script>
-		<script src="Source/Matrix.js"></script>
-		<script src="Source/Qubit.js"></script>
-		<script src="Source/Gate.js"></script>
+		<script src="Q/Q.js"></script>
+		<script src="Q/ComplexNumber.js"></script>
+		<script src="Q/Matrix.js"></script>
+		<script src="Q/Qubit.js"></script>
+		<script src="Q/Gate.js"></script>
 		<script src="Assets/navigation.js"></script>
 	</head>
 	<body>
