--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Q ⟩</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="Assets/style.css">		
-		<script src="Source/Q.js"></script>
+		<script src="Q/Q.js"></script>
 		<script src="Assets/navigation.js"></script>
 	</head>
 	<body>
